# claude-hands-free

./: .env.example  .gitignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  client-macos-text.sh  client-macos.sh  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  start-server.sh  voice-claude.py
mcp-server/: pyproject.toml
mcp-server/src/claude_voice_mcp/: __init__.py  client.py  server.py
mcp-server/tests/: __init__.py  test_client.py  test_server.py
static/: debug-v3.html  index.html  test.html  voice-input.html
tests/: __init__.py  test_api.py
