[project]
name = "claude-voice-mcp"
version = "1.0.0"
description = "MCP server for voice input via browser"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27.0"
]

[project.scripts]
claude-voice-mcp = "claude_voice_mcp:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
